@@ -1,9 +1,9 @@
-;; -*- coding: euc-jp; mode: kahua -*-
+;; -*- coding: utf-8; mode: kahua -*-
 ;;
 ;;  Copyright (c) 2005 Kahua.Org, All rights reserved.
 ;;  See COPYING for terms and conditions of using this software
 ;;
-;; $Id: proj.kahua,v 1.8 2006/12/27 13:09:21 cut-sea Exp $
+;; $Id: proj.kahua,v 1.9 2006/12/27 14:23:58 cut-sea Exp $
 ;;
 
 (load "%%_PROJECT_NAME_%%/version.kahua")
