@@ -1,10 +1,10 @@
-;;-*- coding: euc-jp; mode: kahua -*-
+;;-*- coding: utf-8; mode: kahua -*-
 ;; %%_PROJECT_NAME_%% version
 ;;
 ;;  Copyright (c) 2005 KahuaOrg
 ;;  See COPYING for terms and conditions of using this software
 ;;
-;; $Id: version.kahua.in,v 1.2 2006/07/28 13:09:39 bizenn Exp $
+;; $Id: version.kahua.in,v 1.3 2006/08/13 07:18:48 cut-sea Exp $
 
 ;;---------------------------------------------------------
 (define *%%_PROJECT_NAME_%%-version* "###%%_PROJECT_NAME_UP_%%_VERSION###")
