@@ -1,6 +1,6 @@
-;; -*- coding: euc-jp; mode: scheme -*-
+;; -*- coding: utf-8; mode: scheme -*-
 ;; test %%_PROJECT_NAME_%% script.
-;; $Id: test.scm.in,v 1.4 2006/12/25 18:34:01 cut-sea Exp $
+;; $Id: test.scm.in,v 1.5 2006/12/27 13:09:21 cut-sea Exp $
 
 (use gauche.test)
 (use file.util)
